Proper fix for problem where Select's bottom and right borders weren't visible on IE8.  Since there are borders on both the <td> (white border) and the <table> (blue border), need to set border-collapse: separate.   Refs #10527, #11008.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@21893 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/form/Select.css
+++ b/themes/claro/form/Select.css
@@ -24,6 +24,7 @@
 .claro .dijitSelect {
 	border: 1px solid #b5bcc7;
 	background-color: #f7fcff;
+	border-collapse: separate;
 }
 .dj_ie6 .claro .dijitSelect,
 .dj_ie6 .claro .dijitSelect .dijitButtonNode {
@@ -42,9 +43,6 @@
 	background-color:#ebeef4;
 	background-image: url("images/formHighlight.png");
 	background-repeat:repeat-x;
-}
-.dj_ie8 .claro .dijitSelect .dijitArrowButton {
-	border: none;	/* otherwise bottom and right part of outer (gray) border of button not visible */
 }
 
 .claro .dijitSelect .dijitArrowButton .dijitArrowButtonInner {
